! updateLastMessages() should be accepting only a default privacy state for topics that will definitely be shown to everyone... (Subs-Post.php) - Removed setupTopicPrivacy() function and integrated into loadUserSettings -- I hadn't noticed it was always called in SSI.php anyway. (Load.php, SSI.php) * More semantic approved states and other minor fixes. (Load.php, ManageModeration.php, MoveTopic.php, Subs-Post.php) ! Fixed Search page's search icon not showing up in Wine. (Wine/index.css)

--- a/Themes/default/skins/Wine/index.css
+++ b/Themes/default/skins/Wine/index.css
@@ -127,14 +127,11 @@ body extends .grad700
 /* Styles for buttons and other form elements
 ------------------------------------------------------- */
 
-@remove
-	background: rgba(255,255,235,.32) url($images/filter.gif) 5px 5px no-repeat
-
 #search_form
 	input.search
 		color: white
 		border-color: #777 #aaa #aaa #777
-		background: rgba(0,0,0,.1) url($images/filter.gif) 5px 5px no-repeat
+		background-color: rgba(0,0,0,.1)
 	input[type=submit]
 		background: #938983
 		border-color: #bbb #888 #888 #bbb
